test/extension_test_cases/valid/forLoop/forPrint.wacc
begin
  for int i = 0; i < 5; i = i + 1 do
    println i
  done
end
