test/extension_test_cases/invalid/forLoop/forMissingUpdateStatement.wacc
begin
  for int i = 0; i < 10; do
    skip
  done
end
